--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,4 @@ language: objective-c
 xcode_project: FoodTracker.xcodeproj # path to your xcodeproj folder
 xcode_scheme: MyNewProjectTests
 xcode_destination: platform=iOS Simulator,OS=12.0,name=iPhone 7
+os: osx
